# routestogpx

./: .gitignore  Cargo.toml  package-lock.json  package.json  plan.md  test_route.kml  tsconfig.json  wrangler.toml
.github/workflows/: deploy.yml
functions/api/: convert.ts  mcp.ts
functions/wasm/: wasm-loader.ts  wasm.d.ts
src/: lib.rs  types.rs
src/gpx/: mod.rs  writer.rs
src/parser/: kml.rs  mod.rs  polyline.rs  url.rs
www/: _headers  about.html  app.js  index.html  llms.txt  openapi.json  privacy.html  robots.txt  sitemap.xml  styles.css
www/.well-known/: agent.json  ai-plugin.json
www/pkg/: package.json  routes_to_gpx.d.ts  routes_to_gpx.js  routes_to_gpx_bg.wasm  routes_to_gpx_bg.wasm.d.ts
